--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@
 
     .container {
         width: 100%;
-        max-width: 1410px;
+        max-width: 1160px;
         margin: 0 auto;
         padding: 0 1.3rem;
     }
@@ -37,7 +37,7 @@
     =================================== */
     .main-header {
         padding-top: 50px;
-        padding-bottom: 85px;
+        padding-bottom: 65px;
 
         background-color: #eeeeee;
     }
@@ -72,11 +72,17 @@
 
     .nav-link,
     .user-link {
+        font-weight: 500;
         color: #000;
+        text-transform: uppercase;
     }
 
     .user-link {
         position: relative;
+
+        font-weight: 500;
+        color: #000;
+        text-transform: uppercase;
     }
 
     .user-link::before {
@@ -102,3 +108,67 @@
         color: rgba(0, 0 , 0, 0.3)
     }
 
+        /* Slider
+    =================================== */
+
+    .slider {
+        margin-bottom: 80px;
+
+        background-color: #eeeeee;
+    }
+
+    .slider .container {
+        position: relative;
+        display: flex;
+    }
+
+
+    .slider-text {
+        max-width: 390px;
+    }
+
+    .slider-title {
+        margin:0 0 30px 0;
+
+        font-size: 3.5rem;
+        line-height: 3.5rem;
+        font-weight: bold;
+    }
+
+    .slider-subtitle {
+        margin-bottom: 45px;
+    }
+
+    .btn {
+        display: inline-block;
+        max-width: 245px;
+        margin-bottom: 80px;
+        padding: 18px 55px;
+        border: none;
+        border-radius: 5px;
+
+        font-size: inherit;
+        color: #fff;
+        text-transform: uppercase;
+        text-align: center;
+
+        background-color: #fb565a;
+    }
+
+    .btn:hover,
+    .btn:focus {
+        background-color: #e74246;
+    }
+
+    .btn:active {
+        background-color: #d7373b;
+        color: rgba(255, 255, 255, 0.3);
+
+        box-shadow:inset 0 3px rgba(0, 0, 0, 0.1) ;
+    }
+
+    .slider-image {
+        position: absolute;
+        bottom: 0;
+        right: 20px;
+    }
