Сверстал раздел продукты

--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,37 @@
     html {
-        font-size: 16px;  
+        font-size: 16px;
     }
 
-    *,
-    *::before,
-    *::after {
+    *, *::before, *::after {
         box-sizing: border-box;
     }
 
     body {
         margin: 0;
-
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
         line-height: 1.5;
         color: #283136;
     }
 
-    h1,h2,h3,h4,h5,h6 {
+    h1, h2, h3, h4, h5, h6 {
         margin: 0;
     }
 
     a {
         text-decoration: none;
+    }
+
+    .visually-hidden {
+        position: absolute !important;
+        clip: rect(1px 1px 1px 1px);
+        /* IE6, IE7 */
+        clip: rect(1px, 1px, 1px, 1px);
+        padding: 0 !important;
+        border: 0 !important;
+        height: 1px !important;
+        width: 1px !important;
+        overflow: hidden;
     }
 
     .container {
@@ -32,13 +41,12 @@
         padding: 0 1.3rem;
     }
 
-
     /* Header
     =================================== */
+
     .main-header {
         padding-top: 50px;
         padding-bottom: 65px;
-
         background-color: #eeeeee;
     }
 
@@ -48,8 +56,7 @@
         align-items: center;
     }
 
-    .logo-link:hover,
-    .logo-link:focus {
+    .logo-link:hover, .logo-link:focus {
         opacity: 0.8;
     }
 
@@ -62,7 +69,6 @@
 
     .nav-list {
         display: flex;
-
         list-style: none;
     }
 
@@ -70,8 +76,7 @@
         margin-right: 50px;
     }
 
-    .nav-link,
-    .user-link {
+    .nav-link, .user-link {
         font-weight: 500;
         color: #000;
         text-transform: uppercase;
@@ -79,7 +84,6 @@
 
     .user-link {
         position: relative;
-
         font-weight: 500;
         color: #000;
         text-transform: uppercase;
@@ -89,31 +93,25 @@
         position: absolute;
         top: 0;
         left: -25px;
-
         content: '';
         width: 15px;
         height: 15px;
         background-image: url('../img/svg/cart-icon.svg');
     }
 
-    .nav-link:hover,
-    .nav-link:focus,
-    .user-link:hover,
-    .user-link:focus {
+    .nav-link:hover, .nav-link:focus, .user-link:hover, .user-link:focus {
         color: #fb565a;
     }
 
-    .nav-link:active,
-    .user-link:active {
-        color: rgba(0, 0 , 0, 0.3)
+    .nav-link:active, .user-link:active {
+        color: rgba(0, 0, 0, 0.3)
     }
 
-        /* Slider
+    /* Slider
     =================================== */
 
     .slider {
         margin-bottom: 80px;
-
         background-color: #eeeeee;
     }
 
@@ -122,14 +120,12 @@
         display: flex;
     }
 
-
     .slider-text {
         max-width: 390px;
     }
 
     .slider-title {
-        margin:0 0 30px 0;
-
+        margin: 0 0 30px 0;
         font-size: 3.5rem;
         line-height: 3.5rem;
         font-weight: bold;
@@ -137,38 +133,98 @@
 
     .slider-subtitle {
         margin-bottom: 45px;
+        color: #283136;
     }
 
     .btn {
         display: inline-block;
         max-width: 245px;
         margin-bottom: 80px;
-        padding: 18px 55px;
+        padding: 15px 55px;
         border: none;
         border-radius: 5px;
-
         font-size: inherit;
         color: #fff;
         text-transform: uppercase;
         text-align: center;
-
         background-color: #fb565a;
     }
 
-    .btn:hover,
-    .btn:focus {
+    .btn:hover, .btn:focus {
         background-color: #e74246;
     }
 
     .btn:active {
         background-color: #d7373b;
         color: rgba(255, 255, 255, 0.3);
-
-        box-shadow:inset 0 3px rgba(0, 0, 0, 0.1) ;
+        box-shadow: inset 0 3px rgba(0, 0, 0, 0.1);
     }
 
     .slider-image {
         position: absolute;
         bottom: 0;
         right: 20px;
+    }
+
+    /* Products
+    =================================== */
+
+    .products-list {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .products-item {
+        width: 100%;
+        max-width: 300px;
+        margin-right: 100px;
+        list-style: none;
+    }
+
+    .products-img {
+        margin-bottom: 25px;
+    }
+
+    .product-title {
+        margin-bottom: 25px;
+        font-size: 1.5rem;
+        font-weight: bold;
+        color: #000;
+        text-transform: uppercase;
+    }
+
+    .product-subtitle {
+        margin-bottom: 35px;
+        color: #283136;
+    }
+
+    .product-btn {
+        padding: 12px 40px;
+    }
+
+    .product-btn-green {
+        background-color: #00ca74;
+    }
+
+    .product-btn-yellow {
+        background-color: #efc84a;
+    }
+
+    .product-btn-green:hover,
+    .product-btn-green:focus {
+       background-color: #00bc6c;
+    }
+
+    .product-btn-green:active {
+        background-color:#00aa62;
+        box-shadow: inset 0 3px rgba(0, 153, 88, 0.1);
+    }
+    .product-btn-yellow:hover,
+    .product-btn-yellow:focus {
+       background-color: #eab534;
+    }
+
+    .product-btn-yellow:active {
+        background-color:#e5a722;
+        box-shadow: inset 0 3px rgba(206, 150, 31, 0.1);
     }
