--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,8 @@
 
     .slider-title {
         margin: 0 0 30px 0;
+
+        color: #000;
         font-size: 3.5rem;
         line-height: 3.5rem;
         font-weight: bold;
@@ -169,6 +171,22 @@
     /* Products
     =================================== */
 
+    .products {
+        position: relative;
+        margin-bottom: 160px;
+    }
+
+    .products::after {
+        position: absolute;
+        left: 12%;
+        bottom: -80px;
+        content: "";
+        width: 80%;
+        height: 2px;
+
+        background-color: #eeeeee;
+    }
+
     .products-list {
         display: flex;
         justify-content: space-between;
@@ -199,6 +217,7 @@
     }
 
     .product-btn {
+        margin: 0;
         padding: 12px 40px;
     }
 
@@ -227,4 +246,110 @@
     .product-btn-yellow:active {
         background-color:#e5a722;
         box-shadow: inset 0 3px rgba(206, 150, 31, 0.1);
+    }
+
+        /* About
+    =================================== */
+
+
+    .about {
+        position: relative;
+    }
+    
+    .container {
+
+        display: flex;
+    }
+
+    .about::after {
+        position: absolute;
+        left: 12%;
+        bottom: -80px;
+        content: "";
+        width: 80%;
+        height: 2px;
+
+        background-color: #eeeeee;
+    }
+
+
+    .left-column {
+        width: 100%;
+        max-width: 660px;
+        margin-right: 95px;
+    }
+
+    .about-title {
+        margin-bottom: 40px;
+
+        color: #000;
+        font-size: 2.7rem;
+        line-height: 2.7rem;
+        font-weight: 500;
+    }
+
+    .about-subtitle {
+        margin-bottom: 50px;
+
+        color: #283136;
+    }
+
+    .list-title {
+        margin-bottom: 35px;
+
+        color: #000;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    .about-list {
+        
+    }
+
+    .list-item {
+        position: relative;
+
+        margin-bottom: 35px;
+
+        list-style: none;
+    }
+
+    .list-item::after {
+        position: absolute;
+        bottom: 10px;
+        left: -35px;
+
+        content: "";
+        width: 25px;
+        height: 2px;
+        background-color: #fb565a;
+
+    }
+
+    .right-column-flex {
+        display: flex;
+    }
+
+    .right-column-title {
+        margin-bottom: 55px;
+
+        color: #000;
+        font-weight: 700;
+        text-transform: uppercase;
+    }
+
+    .right-column-item {
+        width: 100%;
+        max-width: 120px;
+    }
+
+    .right-column-percent {
+        font-size: 2.7rem;
+        line-height: 0;
+        color: #000;
+        font-weight: 700;
+    }
+
+    .percent {
+
     }
