--- a/css/style.css
+++ b/css/style.css
@@ -386,8 +386,17 @@
     
     .modal-map {
         width: 100%;
-        max-width: 1725px;
-        max-height: 808px;
+        min-height: 415px;
+        margin-bottom: 70px;
+    }
+
+    .modal-map-img {
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        max-height: 415px;
     }
 
 
