--- a/css/style.css
+++ b/css/style.css
@@ -513,3 +513,129 @@
     .sale-text {
         margin: 0;
     }
+
+
+
+        /* Стили для страницы каталога
+    =================================== */
+
+
+
+
+        /* Content-title
+    =================================== */
+    .content-title {
+        width: 100%;
+
+        background-color: #eeeeee;
+    }
+
+    .title-text {  
+        width: 100%;
+        max-width: 760px;
+        margin: 0 auto;
+        padding-bottom: 120px;
+
+        font-size: 3.45rem;
+        font-weight: bold;
+        color: #000;
+    }
+
+        /* filter-feature
+    =================================== */
+
+    .group-input {
+        display: flex;
+        flex-direction: column;
+
+        border: none;
+    }
+
+    .group-title {
+        font-size: 1.125rem;
+        font-weight: bold;
+        color: #000;
+
+        margin-bottom: 20px;
+    }
+
+    .group-input label {
+        position: relative;
+
+        margin-bottom: 30px;
+
+        cursor: pointer;
+    }
+
+    .group-input input[type="checkbox"],
+    .group-input input[type="radio"] {
+        display: none;
+    }
+
+    .radio-label {
+        padding-left: 22px;
+    }
+
+    .radio-label::before {
+        position: absolute;
+        top: 0;
+        left: -14px;
+
+        content: "";
+        width: 25px;
+        height: 25px;
+
+        background-image: url('../img/svg/radio-off.svg');
+    }
+
+    input:checked + .radio-label::before {
+        background-image: url('../img/svg/radio-on.svg');
+    }
+
+    .checkbox-label {
+        padding-left: 20px;
+    }
+
+    .checkbox-label::before {
+        position: absolute;
+        top: 0;
+        left: -13px;
+
+        content: "";
+        width: 23px;
+        height: 23px;
+
+        background-image: url('../img/svg/checkbox-off.svg');
+    }
+
+    input:checked + .checkbox-label::before {
+        background-image: url('../img/svg/checkbox-on.svg');
+    }
+
+    .form-btn {
+        font: inherit;
+        display: inline-block;
+        max-width: 260px;
+        margin-bottom: 1380px;
+        padding: 20px 90px;
+        border: none;
+        border-radius: 5px;
+        font-size: inherit;
+        font-weight: 500;
+        color: #000;
+        text-transform: uppercase;
+        text-align: center;
+    }
+
+    .form-btn:hover,
+    .form-btn:focus {
+        outline: none;
+        background-color: #dfdfdf;
+    }
+
+    .form-btn:active {
+        color: rgba(0, 0, 0, 0.3);
+        background-color: ##d5d5d5;
+        box-shadow: inset 0 3px rgba(0, 1, 1, 0.1);
+    }
+
