--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@
         text-decoration: none;
     }
 
+    image {
+        width: 100%;
+        height: auto;
+    }
+
     .visually-hidden {
         position: absolute !important;
         clip: rect(1px 1px 1px 1px);
@@ -56,13 +61,11 @@
         align-items: center;
     }
 
-    .logo-link:hover,
-    .logo-link:focus {
+    .logo-link:hover, .logo-link:focus {
         outline: none;
     }
 
-    .logo-link:hover .logo-content, 
-    .logo-link:focus .logo-content {
+    .logo-link:hover .logo-content, .logo-link:focus .logo-content {
         opacity: 0.6;
         outline: none;
     }
@@ -184,7 +187,7 @@
         margin-bottom: 160px;
     }
 
-    .products::after {
+    .main-page .products::after {
         position: absolute;
         left: 11%;
         bottom: -80px;
@@ -236,8 +239,7 @@
         background-color: #efc84a;
     }
 
-    .product-btn-green:hover,
-    .product-btn-green:focus {
+    .product-btn-green:hover, .product-btn-green:focus {
         background-color: #00bc6c;
         outline: none;
     }
@@ -247,8 +249,7 @@
         box-shadow: inset 0 3px rgba(0, 153, 88, 0.1);
     }
 
-    .product-btn-yellow:hover, 
-    .product-btn-yellow:focus {
+    .product-btn-yellow:hover, .product-btn-yellow:focus {
         background-color: #eab534;
         outline: none;
     }
@@ -379,13 +380,12 @@
     .partners-logo {
         opacity: 0.2;
     }
-    .partners-link:hover,
-    .partners-link:focus {
+
+    .partners-link:hover, .partners-link:focus {
         outline: none;
     }
 
-    .partners-link:hover > .partners-logo,
-    .partners-link:focus > .partners-logo {
+    .partners-link:hover>.partners-logo, .partners-link:focus>.partners-logo {
         opacity: 1;
     }
 
@@ -446,11 +446,9 @@
         color: #666666;
     }
 
-    .phone-link:hover,
-    .phone-link:focus {
+    .phone-link:hover, .phone-link:focus {
         color: #000;
     }
-
 
     .modal-btn {
         margin: 0;
@@ -530,10 +528,8 @@
         margin: 0;
     }
 
-
     /* Стили для страницы каталога
     =================================== */
-
 
     /* Content-title
     =================================== */
@@ -541,8 +537,7 @@
     .content-title-container {
         width: 100%;
         margin-bottom: 65px;
-
-        background-color: #eeeeee; 
+        background-color: #eeeeee;
     }
 
     .content-title-text {
@@ -559,7 +554,7 @@
     =================================== */
 
     .filter-feature {
-        margin-right: 140px;
+        margin-right: 90px;
     }
 
     .filter-form {
@@ -582,9 +577,7 @@
         margin-bottom: 20px;
     }
 
-
-    .group-input .radio-label,
-    .group-input .checkbox-label {
+    .group-input .radio-label, .group-input .checkbox-label {
         position: relative;
         margin-bottom: 30px;
         cursor: pointer;
@@ -656,7 +649,7 @@
         box-shadow: inset 0 3px rgba(0, 1, 1, 0.1);
     }
 
-    /* products-filter
+    /* products
     =================================== */
 
     .products {
@@ -665,13 +658,13 @@
     }
 
     .products-filter {
+        margin-bottom: 80px;
         display: flex;
         justify-content: space-between;
     }
 
     .products-filter-title {
         margin: 0;
-
         font-size: 1.125rem;
         font-weight: 700;
         color: #000;
@@ -683,7 +676,6 @@
         width: 100%;
         max-width: 360px;
         margin: 0;
-
         list-style: none;
     }
 
@@ -716,7 +708,6 @@
         width: 11px;
         height: 10px;
         background-image: url('../img/svg/black-triangle.svg');
-
         transform: rotate(180deg);
     }
 
@@ -730,10 +721,8 @@
         background-image: url('../img/svg/grey-triangle.svg');
     }
 
-
-        /* filter-price
+    /* filter-price
     =================================== */
-
 
     .filter-price {
         width: 100%;
@@ -751,7 +740,6 @@
 
     .price-label {
         margin-right: 10px;
-
         font-size: 1rem;
         color: #283136;
         text-transform: uppercase;
@@ -765,19 +753,95 @@
 
     .price-input {
         border: none;
-        border-radius:3px ;
+        border-radius: 3px;
         background-color: #eeeeee;
     }
 
     .price-input::placeholder {
         font-family: 'Roboto', sans-serif;
         font-size: 1rem;
-        color:#283136;
+        color: #283136;
         text-align: center;
     }
 
-    .price-input:hover,
-    .price-input:focus {
+    .price-input:hover, .price-input:focus {
         background-color: #dfdfdf;
         outline: none;
+    }
+
+    /* products-cards
+    =================================== */
+
+    .products-cards {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+        max-width: 760px;
+        position: relative;
+    }
+
+    .cards-container {
+        position: relative;
+
+        margin-right: 40px;
+        margin-bottom: 70px;
+        max-width: 360px;
+        width: 100%;
+    }
+
+    .cards-container:nth-child(even) {
+        margin-right: 0;
+    }
+
+    .cards-image {
+        position: relative;
+    }
+
+    .image-header {
+        max-width: 360px;
+        position: absolute;
+        left: 0;
+        top: -40px;
+    }
+
+    .image-header-hover {
+        z-index: 1;
+        display: none;
+    }
+
+    .cards-container:hover .cards-description, 
+    .cards-container:focus .cards-description {
+        display: block;
+    }
+
+    .cards-container:hover .image-header-hover,
+    .cards-container:focus .image-header-hover {
+        display: block;
+    }
+
+    .cards-description {
+        position: absolute;
+        bottom: 7px;
+        left: 0;
+
+        display: none;
+        width: 360px;
+        height: 230px;
+        padding-top: 30px;
+        background-color: #eee;
+        text-align: center;
+    }
+
+    .description-title {
+        margin-bottom: 20px;
+    }
+
+    .description-text {
+        margin-bottom: 30px;
+    }
+
+    .products-cards-btn {
+        width: 200px;
+        height: 50px;
+        margin-bottom: 40px;
     }
